base: some fixes to commenting and start of KWClient AJAX extensions

--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -57,6 +57,10 @@ mppsdk.dir=${geotracing.external.dir}/${mppsdk}
 mmapi=mmapi
 mmapi.dir=${geotracing.external.dir}/${mmapi}
 
+# J2ME Micro Window Toolkit (MWT), framework for developing user interfaces (UIs).
+mwt=mwt-1.1
+mwt.dir=${geotracing.external.dir}/${mwt}
+
 # Postgis JDBC driver - provider: postgis.refractions.net
 postgis-jdbc=postgis-jdbc-1.1.1
 postgis-jdbc.dir=${geotracing.external.dir}/${postgis-jdbc}
