base: various small editorial changes

--- a/base/trunk/client/mobitracer/etc/mt.properties
+++ b/base/trunk/client/mobitracer/etc/mt.properties
@@ -1,5 +1,5 @@
-pundit.url=www.geotracing.com/gt
-sumatra.url=test.geotracing.com/gt
+# pundit.url=www.geotracing.com/gt
+# sumatra.url=test.geotracing.com/gt
 mt.options=full
 # gps.sample.interval=200000 (sample itnerval in millis)
 
