geoskating: new URL obtainement mobitracer

--- a/app/geoskating/trunk/server/webapp/gs/ota/mt.properties
+++ b/app/geoskating/trunk/server/webapp/gs/ota/mt.properties
@@ -1,10 +1,2 @@
-# put here the URL based on your hostname
-pundit.url=www.geoskating.com/gs
-sumatra.url=test.geoskating.com/gs
+# put here extra/overridden properties
 gps.sample.interval=15000
-
-
-
-
-
-
