--- a/app/bliin/trunk/server/webapp/bliin01/ota/mt.properties
+++ b/app/bliin/trunk/server/webapp/bliin01/ota/mt.properties
@@ -1,7 +1,4 @@
-# put here the URL based on your hostname
-test.url=test.bliin.com/bliin01
-prod.url=bliin.com/bliin01
-sumatra.url=test.geotracing.com/bliin01
+# put here overridden props
 gps.sample.interval=15000
 
 
