--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -33,8 +33,12 @@ btapi.dir=${geotracing.external.dir}/${btapi}
 dojo-ajax=dojo-0.3.1-ajax
 dojo-ajax.dir=${geotracing.external.dir}/${dojo-ajax}
 
+# EHCache object caching library - provider: http://ehcache.sourceforge.net
+ehcache=ehcache-1.2.4
+ehcache.dir=${geotracing.external.dir}/${ehcache}
+
 # KeyWorx distro - provider: www.keyworx.org
-keyworx=keyworx-1.0.7rc2
+keyworx=keyworx-1.0.7rc3
 keyworx.dir=${geotracing.external.dir}/${keyworx}
 
 # KeyWorx tagging plugin - provider: www.keyworx.org
