--- a/base/trunk/client/mobitracer/build.xml
+++ b/base/trunk/client/mobitracer/build.xml
@@ -18,7 +18,7 @@
 	<!-- Project global properties; overrule by modifying build.properties -->
 	<property file="build.properties"/>
 
-	<!-- <property name="project.src.path" value="${basedir}/src:${kwclient.src}:${mjox.src}"/> -->
+	<!-- <property name="project.src.path" value="${basedir}/src${path.separator}${kwclient.src}${path.separator}${mjox.src}"/> -->
 	<property name="project.rsc.dir" value="${basedir}/rsc"/>
 	<property name="project.etc.dir" value="${basedir}/etc"/>
 	<property name="project.manifest" value="${project.etc.dir}/MANIFEST.MF"/>
@@ -51,7 +51,7 @@
 
 
 	<!-- Various paths -->
-	<property name="preverify.classpath" value="${midp2.dir}/classes:${jsr82.zip}"/>
+	<property name="preverify.classpath" value="${midp2.dir}/classes${path.separator}${jsr82.zip}"/>
 	<property name="boot.classpath" value="${midp2.dir}/classes"/>
 
 	<path id="compile.sourcepath">
@@ -103,9 +103,7 @@
 			<property name="package" value="${mppsdk}"/>
 		</ant>
 		
-		<exec executable="chmod">
-			<arg line="+x ${preverify}"/>
-		</exec>
+		<chmod file="${preverify}" perm="ugo+x"/>
 
 		<ant antfile="${geotracing.external.dir}/build.xml" target="get-external" inheritall="false">
 			<property name="package" value="${proguard}"/>
@@ -128,7 +126,7 @@
 
 		<java fork="yes" classname="proguard.ProGuard" classpath="${proguard.jar}">
 			<arg line="-dontusemixedcaseclassnames"/>
-			<arg line="-libraryjars ${boot.classpath}:${jsr82.zip}"/>
+			<arg line="-libraryjars ${boot.classpath}${path.separator}${jsr82.zip}"/>
 			<arg line="-injars ${classes.dir}"/>
 			<arg line="-outjar ${obf.dir}"/>
 			<arg line="-keep 'public class * extends
@@ -198,9 +196,8 @@
 
 	<target name="install">
 		
-		<exec executable="chmod">
-			<arg line="+x ${btsend}"/>
-		</exec>
+		<chmod file="${btsend}" perm="ugo+x" />
+		
 		<exec executable="${btsend}">
 			<arg line="${project.jar}"/>
 		</exec>
