--- a/app/walkandplay/trunk/server/cfg/server.properties
+++ b/app/walkandplay/trunk/server/cfg/server.properties
@@ -22,5 +22,5 @@ keyworx.log.level=INFO
 
 keyworx.mail.server=smtp1.waag.org
 keyworx.mail.sender=info@walkandplay.com
-host.name=http://www.walkandplay.com/
+#host.name=http://www.walkandplay.com/
 
