bliin: various updates, including class package refactoring

--- a/app/bliin/trunk/server/build.properties
+++ b/app/bliin/trunk/server/build.properties
@@ -3,7 +3,7 @@
 # project props
 project.name=Bliin
 project.id=bliin
-version=1.0.9
+version=1.0.10
 
 war.name=bliin01
 front.name=use
@@ -12,7 +12,7 @@ front.name=use
 gt.war.dir=${basedir}/../../../../base/trunk/server/build/war
 
 # specify the directory for your (tomcat) webapps
-deploy.local.dir=/var/keyworx/webapps/test.geotracing.com
+deploy.local.dir=/var/keyworx/webapps/local.bliin.com
 # deploy.pundit.dir=/Volumes/homes/httpd/geotracing.com
 
 
