Updated for diwi project

--- a/app/diwi/trunk/server/build.properties
+++ b/app/diwi/trunk/server/build.properties
@@ -3,9 +3,9 @@
 # your PATH must point to the bin where the Jikes compiler is
 build.compiler=jikes
 
-war.name=gt
-deploy.local.dir=/var/keyworx/webapps/test.geotracing.com
-deploy.live.dir=/Volumes/homes/httpd/geotracing.com
+war.name=diwi
+deploy.local.dir=/var/keyworx/webapps/local.diwi.nl
+deploy.live.dir=/Volumes/homes/httpd/diwi.nl
 
 
 
