--- a/app/diwi/trunk/server/cfg/server.properties
+++ b/app/diwi/trunk/server/cfg/server.properties
@@ -13,7 +13,7 @@ keyworx.backup.dir=/var/keyworx/backup
 #
 
 # absolute log dir (default /var/keyworx/log)
-keyworx.log.dir=/var/keyworx/log/gt
+keyworx.log.dir=/var/keyworx/log/diwi
 
 # Level as defined in java.util.Logging
 # e.g. SEVERE, WARNING, INFO, FINE etc
