--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -9,7 +9,8 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 	<!-- Initialization of properties (dirs, files) -->
 
 	<!-- Project global properties; overrule by modifying build.properties -->
-    <property name="geotracing.base.dir" value="${basedir}/../../base/"/>
+    <property name="geotracing.base.dir" value="${basedir}/../../../../base/trunk"/>
+	<property name="geotracing.server.dir" value="${geotracing.base.dir}/server"/>
 	<property name="geotracing.external.dir" value="${geotracing.base.dir}/external"/>
 	<property file="${geotracing.external.dir}/build.properties"/>
 
@@ -19,7 +20,6 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 
 	<property file="../build.properties"/>
 	<property file="build.properties"/>
-
 
 	<!-- Java compiler options -->
 	<property name="javac.debug" value="false"/>
@@ -63,6 +63,12 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 	<property name="package.zip" value="${dist.dir}/${project.id}-${version}.zip"/>
 	<property name="packagewar.zip" value="${dist.dir}/${project.id}-war-${version}.zip"/>
 
+	<!-- Construct compilation sourcepath -->
+	<path id="compile.sourcepath">
+		<pathelement location="${home.src.dir}"/>
+		<pathelement location="${geotracing.server.dir}/src"/>
+	</path>
+
 	<!-- Construct compilation classpath -->
 	<path id="compile.classpath">
 		<pathelement location="${build.class.dir}"/>
@@ -99,9 +105,11 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 		<ant antfile="${geotracing.external.dir}/build.xml" target="get-external" inheritall="false">
 			<property name="package" value="${postgis-jdbc}"/>
 		</ant>
+
 		<ant antfile="${geotracing.external.dir}/build.xml" target="get-external" inheritall="false">
 			<property name="package" value="${kwx-tagging}"/>
 		</ant>
+
 		<ant antfile="${geotracing.external.dir}/build.xml" target="get-external" inheritall="false">
 			<property name="package" value="${kwx-metadata}"/>
 		</ant>
@@ -124,9 +132,8 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 			destdir="${build.class.dir}"
 			debug="${javac.debug}"
 			deprecation="${javac.deprecation}"
-			optimize="${javac.optimize}"
-			includes="**/*.java">
-			<src path="${server.src.path}"/>
+			optimize="${javac.optimize}" >
+			<src refid="compile.sourcepath"/>
 
 			<classpath refid="compile.classpath"/>
 		</javac>
@@ -147,16 +154,15 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 				<section name="org/geotracing">
 					<attribute name="Implementation-Title" value="${project.name}"/>
 					<attribute name="Implementation-Version" value="${version}-${DSTAMP}-${TSTAMP}"/>
-					<attribute name="Implementation-Vendor" value="Just Objects"/>
+					<attribute name="Implementation-Vendor" value="Waag Society"/>
 				</section>
 			</manifest>
 		</jar>
 	</target>
 
-	<!--{build.war -->
-	<!-- Build the .wars for the project -->
+	<!-- Build the .war for the project -->
 	<target name="war" depends="jar">
-		<echo message="Building webapp..."/>
+		<echo message="Building webapp ${project.war}..."/>
 
 		<delete dir="${build.war.dir}"/>
 		<delete file="${project.war}"/>
@@ -166,6 +172,9 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 			<fileset dir="${home.webapp.dir}/${war.name}"/>
 		</copy>
 
+		<!-- First assemble all required files into war directory. -->
+
+		<!-- Keyworx configuration -->
 		<echo message="creating config and kwx webapp..."/>
 		<ant antfile="${keyworx.dir}/build-util.xml" target="config-webapp" inheritall="false">
 			<!-- The base config of KW: utopia, kwlive or minimal -->
@@ -185,11 +194,6 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 		<copy todir="${build.war.dir}/WEB-INF/bin" file="${keyworx.dir}/server/admin/3gp2swf.sh" overwrite="true"/>
 		<copy todir="${build.war.dir}/WEB-INF/bin" file="${keyworx.dir}/server/admin/image-meta.sh" overwrite="true"/>
 		<copy todir="${build.war.dir}/WEB-INF/bin" file="${keyworx.dir}/server/admin/exifdate.sh" overwrite="true"/>
-		<copy todir="${build.war.dir}/WEB-INF/bin" file="${home.bin.dir}/drawloc.sh" overwrite="true"/>
-		<copy todir="${build.war.dir}/WEB-INF/bin" file="${home.bin.dir}/mapdrawer.sh" overwrite="true"/>
-			<copy todir="${build.war.dir}/WEB-INF/data" overwrite="true">
-			<fileset dir="${home.data.dir}"/>
-		</copy>
 
 		<copy todir="${build.war.dir}/WEB-INF/lib" overwrite="true" >
 			<fileset dir="${pushlet.dir}/lib">
@@ -212,11 +216,10 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 		<copy todir="${build.war.dir}/WEB-INF/classes">
 			<fileset dir="${home.cfg.dir}">
 				<include name="pushlet.properties"/>
-				<include name="sources.properties"/>
 			</fileset>
 		</copy>
 
-		<!-- untill plugins truly work in KeyWorx copy the jars and tables to get things working-->
+		<!-- until kwx plugins truly work in KeyWorx copy the jars and tables to get things working-->
 		 <copy todir="${build.war.dir}/WEB-INF/cfg/tables" overwrite="true">
 			 <fileset dir="${kwx-metadata.dir}/cfg/tables">
 				 <exclude name="cc_tag.xml"/>
@@ -225,45 +228,15 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 			 <fileset dir="${kwx-tagging.dir}/cfg/tables"/>
 		 </copy>
 
-		<!-- OTA for MobiTracer download -->
-		<copy todir="${build.war.dir}/ota">
-			<fileset dir="${home.client.dir}/etc">
-				<include name="mt.properties"/>
-				<include name="mt.jsp"/>
-			</fileset>
-			<fileset dir="${home.client.dir}/build">
-				<include name="mt.jad"/>
-				<include name="mobitracer.jar"/>
-				<include name="version.html"/>
-			</fileset>
-		</copy>
-
-		<!-- Copy external JS libs. -->
-		<copy todir="${build.war.dir}/lib">
-			<fileset dir="${pushlet.dir}/webapps/pushlet/lib">
-				<include name="ajax-pushlet-client.js"/>
-			</fileset>
-
-			<!-- KWX AJAX client
-			<fileset dir="${keyworx.dir}/client/ajax/kwclient/src">
-				<include name="KWClient.js"/>
-			</fileset> -->
-		</copy>
-
-		<!-- Replace users/passwords with local values as not to have them in repository -->
-		<replace file="${build.war.dir}/WEB-INF/cfg/portal.xml"
-				 replacefilterfile="${home}/security.properties" summary="true"/>
-
 		<!-- Set version numbers and build info in version/index.html. -->
 		<concat destfile="${build.war.dir}/version/index.html">
 			<filelist dir="${home.webapp.dir}/${war.name}/version" files="index.html"/>
-			<filelist dir="${home.client.dir}/build" files="version.html"/>
 			<filterchain>
 				<expandproperties/>
 			</filterchain>
 		</concat>
 
-		<!-- Make war -->
+		<!-- Finally make war -->
 		<jar jarfile="${project.war}">
 			<fileset dir="${build.war.dir}">
 				<include name="**"/>
